# Rag-arena

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: axes.yaml  base.yaml
results/: selected_queries.json
scripts/: analyze_orchestration_gain.py  deep_analysis.py  generate_academic_report.py  generate_analysis.py  generate_report.py  latency_analysis.py  validate_methodology.py
src/ragbench/: __init__.py  beir_download.py  build_indexes.py  cli.py  config.py  config_benchmark.py  run_experiment.py
src/ragbench/clients/: __init__.py  embedding_client.py
src/ragbench/eval/: latency_cost.py  ragas_metrics.py  retrieval_metrics.py  statistics.py
src/ragbench/index/: bm25_index.py  chromadb_index.py
src/ragbench/pipeline/: agentic_rag.py  simple_rag.py
src/ragbench/report/: __init__.py  aggregate.py  render_md.py
src/ragbench/retrievers/: __init__.py  base.py  retrieval.py
tests/: test_config.py  test_parser.py  test_smoke_run.py
